src/main/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: cxp-team-cloudbirds
  labels:
    app: cnj-hello-backend-spring
  name: cnj-hello-backend-spring-service
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: cnj-hello-backend-spring
  sessionAffinity: None
