src/main/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: cxp-team-cloudbirds
  name: cnj-hello-backend-spring-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: cxp.k8s.azure.msgoat.eu
      http:
        paths:
          - path: /cxp-team-cloudbirds-spring(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: cnj-hello-backend-spring-service
                port:
                  number: 80
